# cloud-runner

./: .gitignore  README.md
.agents/plugins/: marketplace.json
docs/: mcp.md  protocol.md
plugins/cloud-runner/: .mcp.json
plugins/cloud-runner/.codex-plugin/: plugin.json
skill/cloud-runner/: SKILL.md
skill/cloud-runner/agents/: openai.yaml
skill/cloud-runner/references/: protocol.md
skill/cloud-runner/scripts/: configure.py  run_python.py
worker/: .dev.vars.example  pyproject.toml  wrangler.toml
worker/src/: entry.py  mcp.py  runner.py
worker/tests/: test_mcp.py  test_runner.py
